part4/exercise-4.01/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: ping-pong-uuid
  name: busybox1
  labels:
    app: busybox1
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
