part4/exercise-4.01/log-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ping-pong-uuid
  name: logs-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs
  template:
    metadata:
      labels:
        app: logs
    spec:
      containers:
        - name: log-reader
          image: lapalmerjack/timestamper-4.01:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 50
---

apiVersion: v1
kind: Service
metadata:
  namespace: ping-pong-uuid
  name: logging-svc
  annotations:
   cloud.google.com/backend-config: '{"default": "logging-health-check"}'
spec:
  type: NodePort
  selector:
    app: logs
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
