part4/exercise-4.01/ping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ping-pong-uuid
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image:  lapalmerjack/pingpong-4.01
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 50
---

apiVersion: v1
kind: Service
metadata:
  namespace: ping-pong-uuid
  name: ping-pong-service
  annotations:
   cloud.google.com/backend-config: '{"default": "ping-pong-health-check"}'
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8083
